# pyopenf1

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
advanced/: index.html
api/client/: index.html
api/exceptions/: index.html
api/models/: index.html
cli/: index.html
docs/: advanced.md  cli.md  index.md  pandas.md  quickstart.md
docs/api/: client.md  exceptions.md  models.md
examples/: dataframe_example.py  quickstart.py  sync_example.py
examples/cookbooks/: track_map.ipynb
pandas/: index.html
pyopenf1/: __init__.py  analytics.py  cli.py  client.py  exceptions.py  py.typed  sync_client.py  tui.py
pyopenf1/core/: __init__.py  cache.py  http_client.py  rate_limiter.py
pyopenf1/endpoints/: __init__.py  championship_api.py  driver_api.py  race_api.py  results_api.py  session_api.py  team_radio_api.py  telemetry_api.py  timing_api.py  weather_api.py
pyopenf1/ext/: __init__.py  pandas.py  polars.py
pyopenf1/models/: __init__.py  championship.py  driver.py  race.py  results.py  session.py  team_radio.py  telemetry.py  timing.py  weather.py
search/: search_index.json
site/: index.html  sitemap.xml
site/api/client/: index.html
site/api/exceptions/: index.html
site/api/models/: index.html
site/quickstart/: index.html
site/search/: search_index.json
tests/: __init__.py  test_client.py
