[tool.poetry]
name = "pyopenf1"
version = "0.1.2"
description = "A production-grade, asynchronous Python API wrapper for the OpenF1 API."
authors = ["Divyam Samarwal <divyamsamarwal@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DivyamSamarwal/pyopenf1"
repository = "https://github.com/DivyamSamarwal/pyopenf1"
documentation = "https://github.com/DivyamSamarwal/pyopenf1#readme"
keywords = ["formula1", "f1", "openf1", "api", "async", "telemetry", "motorsport"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [{ include = "pyopenf1" }]

[tool.poetry.dependencies]
python = "^3.10"
httpx = ">=0.27,<1.0"
pydantic = "^2.0"
tenacity = "^9.0"
click = "^8.1"

[tool.poetry.extras]
pandas = ["pandas"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
respx = "^0.22"
ruff = "^0.8"
mypy = "^1.13"
pandas = "^2.0"
mkdocs-material = "^9.5"
mkdocstrings = {extras = ["python"], version = "^0.27"}

[tool.poetry.scripts]
pyopenf1 = "pyopenf1.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pyopenf1"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["respx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pandas.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio",
]
